# api/openapi.json
@@ -282,6 +282,42 @@
               "format": "int32",
               "default": 25
             }
+          },
+          {
+            "name": "ordenarPor",
+            "in": "query",
+            "schema": {
+              "enum": [
+                "Codigo",
+                "Cliente",
+                "Valor",
+                "Vencimento"
+              ],
+              "type": "string",
+              "allOf": [
+                {
+                  "$ref": "#/components/schemas/OrdemDeContratos"
+                }
+              ],
+              "default": 1
+            }
+          },
+          {
+            "name": "direcao",
+            "in": "query",
+            "schema": {
+              "enum": [
+                "Crescente",
+                "Decrescente"
+              ],
+              "type": "string",
+              "allOf": [
+                {
+                  "$ref": "#/components/schemas/Direcao"
+                }
+              ],
+              "default": 1
+            }
           }
         ],
         "responses": {
@@ -616,7 +652,7 @@
               "type": "string",
               "allOf": [
                 {
-                  "$ref": "#/components/schemas/OrdemDaListagem"
+                  "$ref": "#/components/schemas/OrdemDePessoas"
                 }
               ],
               "default": 1
@@ -906,6 +942,42 @@
               "type": "integer",
               "format": "int32",
               "default": 25
+            }
+          },
+          {
+            "name": "ordenarPor",
+            "in": "query",
+            "schema": {
+              "enum": [
+                "Vencimento",
+                "Cliente",
+                "Competencia",
+                "Valor"
+              ],
+              "type": "string",
+              "allOf": [
+                {
+                  "$ref": "#/components/schemas/OrdemDeRecebiveis"
+                }
+              ],
+              "default": 1
+            }
+          },
+          {
+            "name": "direcao",
+            "in": "query",
+            "schema": {
+              "enum": [
+                "Crescente",
+                "Decrescente"
+              ],
+              "type": "string",
+              "allOf": [
+                {
+                  "$ref": "#/components/schemas/Direcao"
+                }
+              ],
+              "default": 1
             }
           }
         ],
@@ -1668,10 +1740,28 @@
         },
         "additionalProperties": false
       },
-      "OrdemDaListagem": {
+      "OrdemDeContratos": {
+        "enum": [
+          "Codigo",
+          "Cliente",
+          "Valor",
+          "Vencimento"
+        ],
+        "type": "string"
+      },
+      "OrdemDePessoas": {
         "enum": [
           "Nome",
           "Codigo"
+        ],
+        "type": "string"
+      },
+      "OrdemDeRecebiveis": {
+        "enum": [
+          "Vencimento",
+          "Cliente",
+          "Competencia",
+          "Valor"
         ],
         "type": "string"
       },
